my publications have been added

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -137,4 +137,31 @@
  year = {2014},
  isbn = {1461471370, 9781461471370},
  publisher = {Springer Publishing Company, Incorporated},
-} 
+}
+
+@article{gavrilov2015modification,
+  author = {Гаврилов, П. А. and Майков, К. А.},
+  title = {Модификация метода классификации в условиях неполного вектора значений признаков},
+  journal = {Молодежный научно-технический вестник},
+  year = {2015},
+  number = {2},
+  language = {russian},
+}
+
+@article{gavrilov2016review,
+  author = {Гаврилов, П. А. and Майков, К. А.},
+  title = {Обзор методов предобработки, используемых для решения задач классификации в условиях неполноты данных},
+  journal = {Вестник РГРТУ},
+  year = {2016},
+  number = {55},
+  pages = {140--145},
+  language = {russian},
+}
+
+@conference{gavrilov2016combined,
+  author = {Гаврилов, П. А. and Майков, К. А.},
+  title = {Комбинированный метод обработки отсутствующих данных для решения задач дополненной и виртуальной реальностей},
+  booktitle = {Виртуальная и дополненная реальность-2016: состояние и перспективы},
+  year = {2016},
+  language = {russian},
+}
