replaces url in misc with howpublished

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -10,8 +10,8 @@
 
 @misc{voroncov2012ensembling,
   author={Воронцов К.В.},
-  url={http://www.machinelearning.ru/wiki/images/0/0d/Voron-ML-Compositions.pdf},
   title={Лекции по алгоритмическим композициям},
+  howpublished="\url{http://www.machinelearning.ru/wiki/images/0/0d/Voron-ML-Compositions.pdf}",
   year=2012
 }
 
