--- a/bibliography.bib
+++ b/bibliography.bib
@@ -9,26 +9,26 @@
 }
 
 @misc{voroncov2012ensembling,
-  author={Воронцов К.В.},
+  author={Воронцов, К. В.},
   title={Лекции по алгоритмическим композициям},
   howpublished="\url{http://www.machinelearning.ru/wiki/images/0/0d/Voron-ML-Compositions.pdf}",
   year=2012
 }
 
 @masterthesis{minaev2011testing,
-  author={Мниев П.Ю.},
+  author={Мниев, П. Ю.},
   title={Методика тестирования алгоритмов классификации в системе Полигон и её обоснование},
   year={2011},
 }
 
 @bachelorsthesis{gushin2015ensembling,
-  author={Гущин А.Е.},
+  author={Гущин, А. Е.},
   title={Методы ансамблирования обучающихся алгоритмов},
   year={2015}
 }
 
 @inproceedings{voroncov2007system,
-  author={Воронцов К.В. and Инякин А.С. and Лисица А.В.},
+  author={Воронцов, К. В. and Инякин, А. С. and Лисица, А. В.},
   title={Система эмпирического измерения качества алгоритмов классификации},
   booktitle={ММРО-13},
   publisher={МАКС Пресс},
@@ -91,7 +91,7 @@
 }
 
 @article{zagnieva2008solving,
-  author={Загниева И.К.},
+  author={Загниева, И. К.},
   title={Решение проблемы неполноты данных массовых опросов},
   year={2008},
   journal={Российская социология завтрашнего дня: Сборник студенческих работ},
