--- a/bibliography.bib
+++ b/bibliography.bib
@@ -16,7 +16,7 @@
 }
 
 @masterthesis{minaev2011testing,
-  author={Мниев, П. Ю.},
+  author={Минаев, П. Ю.},
   title={Методика тестирования алгоритмов классификации в системе Полигон и её обоснование},
   year={2011},
 }
