--- a/bibliography.bib
+++ b/bibliography.bib
@@ -30,7 +30,7 @@
 @inproceedings{voroncov2007system,
   author={Воронцов, К. В. and Инякин, А. С. and Лисица, А. В.},
   title={Система эмпирического измерения качества алгоритмов классификации},
-  booktitle={ММРО-13},
+  booktitle={Математические методы распознавания образов-13},
   publisher={МАКС Пресс},
   pages={577-581},
   year={2007}
@@ -85,9 +85,11 @@
 }
 
 @book{little2002statistical,
-  author = {Rubin, D. B. and Little R.J.A.},
-  title = {Statistical analysis with missing data, 2nd edn.},
-  year = {2002},
+  author = {Rubin, D. B. and Little, R. J. A.},
+  pages = 408,
+  publisher = {Chichester: Wiley},
+  title = {Statistical analysis with missing data (second edition)},
+  year = 2002,
 }
 
 @article{zagnieva2008solving,
@@ -162,6 +164,8 @@
   author = {Гаврилов, П. А. and Майков, К. А.},
   title = {Комбинированный метод обработки отсутствующих данных для решения задач дополненной и виртуальной реальностей},
   booktitle = {Виртуальная и дополненная реальность-2016: состояние и перспективы},
+  publisher={Издательство ГПБОУ МГОК},
   year = {2016},
+  pages = {86-89},
   language = {russian},
 }
